# TheDomeWebsite

./: CNAME  Cargo.toml  README.md  Trunk.toml  index.html
docs/: index.html  style-21a96d911abd95e4.css  the_dome_website-46d704ead1f38cb1.js  the_dome_website-71b9ce22dea319e7.js  the_dome_website-71b9ce22dea319e7_bg.wasm  the_dome_website-7a5140096b626041.js  the_dome_website-7a5140096b626041_bg.wasm  the_dome_website-a3cf63fdf29ce828.js  the_dome_website-a3cf63fdf29ce828_bg.wasm  the_dome_website-f6d11feef3a83d2a_bg.wasm
src/: common.rs  main.rs  navigation.rs  pages.rs
src/pages/: contact_page.rs  credits_page.rs  gallery_page.rs  home_page.rs  past_events.rs
src/pages/gallery_page/: gallery_image.rs
src/template/: component_tempalte.rs
style/: style.css
