[package]
name = "the_dome_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"

serde_json = "1.0.85"

chrono = "0.4.22"
chrono-tz = "0.6.3"

gloo = "0.8"
gloo-timers = "0.2.4"